--- a/task2/form.html
+++ b/task2/form.html
@@ -25,8 +25,8 @@
             <div class="insideform">
                 <label for="phone">Phone No.</label>
                 <div>
-                    <input class="pre" type="number" id="phone" placeholder="+994">
-                    <input class="number" type="number" id="phone" placeholder="+994000000000">
+                    <input class="pre" type="tel" id="phone" placeholder="+994">
+                    <input class="number" type="tel" id="phone" placeholder="+994000000000">
                 </div>
                 
             </div>
@@ -50,7 +50,7 @@
             </div>
             <div class="insideform">
                 <label for="message">Message</label>
-                <input class="message" type="text" id="message" placeholder="Write your message">
+                <textarea class="message" placeholder="Write your message" ></textarea>
             </div>
             <div class="insideform">
                 <input class="checkbox" type="checkbox" id="checkbox" >
